# compression_app

./: .gitignore  CMakeLists.txt  README.md  compressApp.ex
data/: sample_band1746842714.hdr
include/: dwt.hpp  dwt_db4.hpp  huffman.hpp  image_io.hpp  utils.hpp
src/: CMakeCache.txt  dwt.cpp  dwt_db4.cpp  huffman.cpp  image_io.cpp  main.cpp  utils.cpp
